fix img on home page not fitting in narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,199 +1,199 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    background-color: #24252A;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: #24252A;
 }
 .column {
-    flex: 50%;
-  }
-  .row {
-    display: flex;
-  }
+  flex: 50%;
+}
+.row {
+  display: flex;
+}
 li, a, button {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
 }
 p {
-    padding-top: 36px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    color: #edf0f1;
-    text-decoration: none;
+  padding-top: 36px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: #edf0f1;
+  text-decoration: none;
 }
 ol, ul {
-    padding-left: 30em;
-    padding-right: 30em;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    color: #edf0f1;
-    background-color: #24252A;
-    text-decoration: none;
+  padding-left: 30em;
+  padding-right: 30em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: #edf0f1;
+  background-color: #24252A;
+  text-decoration: none;
 }
 h1 {
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 48px;
-    color: #edf0f1;
-    text-decoration: none;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  color: #edf0f1;
+  text-decoration: none;
 }
 h2 {
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 36px;
-    color: #edf0f1;
-    text-decoration: none;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 36px;
+  color: #edf0f1;
+  text-decoration: none;
 }
 h2 {
-    padding-bottom: 0.5em;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 24px;
-    color: #edf0f1;
-    text-decoration: none;
+  padding-bottom: 0.5em;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  color: #edf0f1;
+  text-decoration: none;
 }
 footer {
-    color: #edf0f1;
-    padding-top: 10px;
-    margin-top: 5px;
+  color: #edf0f1;
+  padding-top: 10px;
+  margin-top: 5px;
 }
 body {
-	background-color: #f8fafc;
+  background-color: #f8fafc;
 }
 .container {
-	padding: 2rem;
+  padding: 2rem;
 }
 .slider-wrapper {
-	position: relative;
-	max-width: 48rem;
-	margin: 0 auto;
+  position: relative;
+  max-width: 48rem;
+  margin: 0 auto;
 }
 .slider {
-	display: flex;
-	aspect-ratio: 16 / 9;
-	overflow-x: auto;
-	scroll-snap-type: x mandatory;
-	scroll-behavior: smooth;
-	box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-	border-radius: 0.5rem;
-	-ms-overflow-style: none;
-	scrollbar-width: none;
+  display: flex;
+  aspect-ratio: 16 / 9;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+  border-radius: 0.5rem;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .slider::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 .slider img {
-	flex: 1 0 100%;
-	scroll-snap-align: start;
-	object-fit: cover;
+  width: 70%;
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
 }
 .slider-nav {
-	display: flex;
-	column-gap: 1rem;
-	position: absolute;
-	bottom: 1.25rem;
-	left: 50%;
-	transform: translateX(-50%);
-	z-index: 1;
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  bottom: 1.25rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
 .slider-nav a {
-	width: 0.5rem;
-	height: 0.5rem;
-	border-radius: 50%;
-	background-color: #fff;
-	opacity: 0.75;
-	transition: opacity ease 250ms;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
 }
 .slider-nav a:hover {
-	opacity: 1;
+  opacity: 1;
 }
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
 }
 .logo {
-    max-width: 72px;
-    cursor: pointer;
+  max-width: 72px;
+  cursor: pointer;
 }
 .navLinks {
-    list-style: none;
+  list-style: none;
 }
 .currentPage {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
-    text-decoration: none;
-    display: inline-block;
-    padding: 0px 20px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
+  display: inline-block;
+  padding: 0px 20px;
 }
 .navLinks li {
-    display: inline-block;
-    padding: 0px 20px;
+  display: inline-block;
+  padding: 0px 20px;
 }
 .navLinks li a {
-    transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 .navLinks li a:hover {
-    color: #0088a9
+  color: #0088a9
 }
 @media screen and (min-width: 650px){
-    .nav-list {
-        float: right;
-    }
+  .nav-list {
+    float: right;
+  }
 }
 
 /* Form Elements */
 
 input{
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #FFFFFF;
-    padding: 10px 10px;
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #FFFFFF;
+  padding: 10px 10px;
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
 }
 
 input::placeholder{
-   color: #FFFFFF;
+  color: #FFFFFF;
 }
 
 input:focus {
-    border-bottom: 2px solid #FF0000;
-  } 
+  border-bottom: 2px solid #FF0000;
+} 
 
 textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #fFFFFF;
-    resize: none;
-
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #fFFFFF;
+  resize: none;
 }
 
 button{
-    background-color: #FFFFFF;
-    border: none;
-    color: #000000;
-    padding: 16px 32px;
-    text-decoration: none;
-    cursor: pointer;
-    text-align: center;
-    display: block;
-    margin: 0 auto;
+  background-color: #FFFFFF;
+  border: none;
+  color: #000000;
+  padding: 16px 32px;
+  text-decoration: none;
+  cursor: pointer;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
